--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>Elgharib OpenType Fonts</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>معاينة خصائص OpenType</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Elgharib OpenType Fonts</h1>
+  <header>
+    <h1>🧠 معاينة خصائص OpenType</h1>
+    <p>ارفع الخط، اكتب النص، وشوف النتيجة مباشرة!</p>
+  </header>
 
-  <label for="fontFile">📂 ارفع خط TTF أو OTF:</label>
-  <input type="file" id="fontFile" accept=".ttf,.otf">
+  <main>
+    <section class="form-area">
+      <input type="file" id="fontFile" accept=".ttf,.otf" />
+      <textarea id="textInput" placeholder="اكتب النص هنا...">بسم الله الرحمن الرحيم</textarea>
+      <button id="renderBtn">معاينة</button>
+    </section>
 
-  <br><br>
+    <section class="preview-area">
+      <div id="preview">المعاينة ستظهر هنا</div>
+    </section>
 
-  <label for="inputText">✍️ اكتب النص المراد معاينته:</label><br>
-  <textarea id="inputText" rows="4" cols="40">مثال: بسم الله الرحمن الرحيم</textarea>
+    <section class="download-area">
+      <button id="downloadBtn">📷 تحميل المعاينة كصورة</button>
+    </section>
+  </main>
 
-  <br><br>
+  <footer>
+    <p>© أحمد الغريب - elgharib-opentype</p>
+  </footer>
 
-  <button id="previewBtn">📌 عرض المعاينة</button>
-
-  <br><br>
-
-  <canvas id="previewCanvas" width="800" height="200" style="border:1px solid #ccc;"></canvas>
-
-  <br><br>
-
-  <button id="downloadBtn">📥 تحميل الصورة</button>
-
-  <script src="opentype.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
