--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <p>© أحمد الغريب - elgharib-opentype</p>
   </footer>
 
+  <!-- مكتبة html2canvas -->
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
+  <!-- ملف الجافاسكربت الخاص بك -->
   <script src="script.js"></script>
 </body>
 </html>
