--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <!-- مكتبة html2canvas -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/opentype.js@1.3.4/dist/opentype.min.js"></script>
 
   <!-- ملف الجافاسكربت الخاص بك -->
   <script src="script.js"></script>
