--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     <section class="preview-area">
       <div id="preview">المعاينة ستظهر هنا</div>
     </section>
-
+<section class="glyphs-area">
+  <h2>🧩 الجليفات (Glyphs) داخل الخط:</h2>
+  <div id="glyphs" class="glyphs-grid">
+    <p>لم يتم تحميل الخط بعد.</p>
+  </div>
+</section>
     <section class="download-area">
       <button id="downloadBtn">📷 تحميل المعاينة كصورة</button>
     </section>
