--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       <button id="downloadBtn">📷 تحميل المعاينة كصورة</button>
     </section>
   </main>
-
+<section class="features-area">
+  <h2>🎛️ خصائص OpenType الموجودة:</h2>
+  <div id="featuresList">لم يتم تحميل الخط بعد.</div>
+</section>
   <footer>
     <p>© أحمد الغريب - elgharib-opentype</p>
   </footer>
